[package]
name = "dblp-rs"
version = "0.1.0"
authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2", features = ["json"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
skim = "0.10"
clap = { version = "4", features = ["derive"] }
biblatex = "0.8"

[[bin]]
name = "dblp"
path = "src/main.rs"

