[package]
name = "dblp-rs"
version = "0.2.0"
authors = ["Matteo Ceccarello <matteo.ceccarello@unipd.it>"]
edition = "2021"

[dependencies]
ureq = { version = "2", features = ["json"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
skim = "0.10"
clap = { version = "4", features = ["derive"] }
biblatex = "0.8"

[[bin]]
name = "dblp"
path = "src/main.rs"

