[package]
name = "dblp-rs"
version = "0.2.0"
authors = ["Matteo Ceccarello <matteo.ceccarello@unipd.it>"]
edition = "2021"

[dependencies]
ureq = { version = "2", features = ["json"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
skim = "0.10"
clap = { version = "4", features = ["derive"] }
biblatex = "0.9"
toml = "0.8.8"
serde_yaml = "0.9.30"
walkdir = "2.4.0"
hayagriva = "0.5.1"

[[bin]]
name = "dblp"
path = "src/main.rs"
